@@ -791,6 +791,7 @@ so you will not be able to save your edits right now. You may wish to cut-n-past
 the text into a text file and save it for later.</strong>',
 'protectedpagewarning' => "<strong>WARNING:  This page has been locked so that only users with sysop privileges can edit it. Be sure you are following the [[Project:Protected_page_guidelines|protected page guidelines]].</strong>",
 'templatesused'	=> 'Templates used on this page:',
+'edittools' => '<!-- Text here will be shown below edit and upload forms. -->',
 
 # History pages
 #
