@@ -274,6 +274,10 @@ fully support the editing toolbar, but was found to be too confusing.
 * Fix custom namespaces on wikis set for Portuguese
 * Major overhaul of Special:Userlogin
 * Update ipblocks table in MySQL 5 table defs
+* (bug 4100, 3049) Add 'edittools' message to hold edit tools, put it
+  on Special:Upload as well as edit, rearrange edit page pieces a bit.
+  Copyright warning now above the buttons to ensure it's visible,
+  template list at the bottom so it can grow.
 
 
 === Caveats ===
